# trick

./: .gitignore  NOTICES  README.md  assemble.py  compile-lisp.py  compile.py  dbginfo.py  env.py  eval.py  exceptions.py  fasl.py  features.py  importsets.py  libloader.py  libname.py  library.py  machinetypes.py  ng.py  primcalls.py  print.py  program.py  pyproject.toml  qq.py  read.py  repl.py  run.sh  runtime.py  secd.py  serialization.py  sexpr.py  snippet.py  stdlib.lisp  stdlib.scm  symbolinfo.py  symtab.py  test.lisp  test.py  test.scm  test.sh  test_compile_errors.py  (+9 more)
stdlib/: defs.scm  scheme-base-exports.scm  scheme-char-exports.scm  scheme-complex-exports.scm  scheme-file-exports.scm  scheme-inexact-exports.scm  scheme-lazy-exports.scm  scheme-r5rs-exports.scm  stdlib.scm
tests/: test.py  test.scm  test_compile_errors.py  test_cyclic_printer.py  test_library_name.py  test_optimization.py  test_reader.py  test_shared_printer.py
trick/: assemble.py  compile.py  config.py  env.py  exceptions.py  fasl.py  features.py  importsets.py  libloader.py  libname.py  library.py  machinetypes.py  optimize.py  primcalls.py  print.py  program.py  qq.py  read.py  repl.py  runtime.py  secd.py  serialization.py  symbolinfo.py  transform.py  trick.py  utils.py
trick/scm/srfi-1/: lib.scm  srfi-1.scm
trick/scm/srfi-14/: lib.scm  srfi-14.scm
trick/scm/srfi-151/: bitwise-33.scm  bitwise-60.scm  bitwise-core.scm  bitwise-other.scm  lib.scm
trick/scm/srfi-48/: lib.scm  srfi-48.scm
trick/scm/srfi-69/: lib.scm  srfi-69.scm
trick/scm/srfi-8/: lib.scm  srfi-8.scm
(+15 files in other folders)
