[project]
name = "trick-scheme"
authors = [
  { name="Mostafa Razavi", email="mostafa@sepent.com" },
]
description = "An r7rs-small compliant implementation of Scheme"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = []

[project.urls]
"Homepage" = "https://sr.ht/~elektito/trick"

[project.scripts]
trick = "trick.trick:main"

[tool.setuptools]
packages = ["trick"]

[tool.setuptools.package-data]
trick = ["scm/**/*.scm"]

[tool.setuptools.dynamic]
version = {attr = "trick.version.__version__"}
